antlr/CSharpParser.py
# Generated from CSharp.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSharpParser ( Parser ):

    grammarFileName = "CSharp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'using'", "'namespace'", "'return'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'class'", "'public'", 
                     "'private'", "'static'", "'void'", "'int'", "'double'", 
                     "'string'", "'bool'", "'if'", "'else'", "'for'", "'while'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", 
                     "'||'", "'!'", "'('", "')'", "'{'", "'}'", "';'", "','", 
                     "'.'", "'?'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "COMMENT", "MULTILINE_COMMENT", "CLASS", "PUBLIC", 
                      "PRIVATE", "STATIC", "VOID", "INT", "DOUBLE", "STRING", 
                      "BOOL", "IF", "ELSE", "FOR", "WHILE", "ID", "INT_LITERAL", 
                      "DOUBLE_LITERAL", "STRING_LITERAL", "BOOL_LITERAL", 
                      "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "ASSIGN", 
                      "EQUALS", "NOT_EQUALS", "GREATER_THAN", "LESS_THAN", 
                      "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", "AND", 
                      "OR", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "SEMICOLON", "COMMA", "DOT", "QUESTION_MARK", "COLON" ]

    RULE_compilation_unit = 0
    RULE_using_directive = 1
    RULE_namespace_declaration = 2
    RULE_namespace_name = 3
    RULE_type_declaration = 4
    RULE_class_declaration = 5
    RULE_class_member = 6
    RULE_method_declaration = 7
    RULE_method_modifier = 8
    RULE_method_return_type = 9
    RULE_formal_parameter_list = 10
    RULE_formal_parameter = 11
    RULE_method_body = 12
    RULE_field_declaration = 13
    RULE_type = 14
    RULE_statement = 15
    RULE_block = 16
    RULE_if_statement = 17
    RULE_iteration_statement = 18
    RULE_while_statement = 19
    RULE_for_statement = 20
    RULE_for_initializer = 21
    RULE_for_iterator = 22
    RULE_local_variable_declaration = 23
    RULE_expression_statement = 24
    RULE_return_statement = 25
    RULE_expression = 26
    RULE_assignment_expression = 27
    RULE_conditional_expression = 28
    RULE_logical_or_expression = 29
    RULE_logical_and_expression = 30
    RULE_equality_expression = 31
    RULE_relational_expression = 32
    RULE_additive_expression = 33
    RULE_multiplicative_expression = 34
    RULE_unary_expression = 35
    RULE_primary_expression = 36
    RULE_literal = 37
    RULE_namespace_name_list = 38

    ruleNames =  [ "compilation_unit", "using_directive", "namespace_declaration", 
                   "namespace_name", "type_declaration", "class_declaration", 
                   "class_member", "method_declaration", "method_modifier", 
                   "method_return_type", "formal_parameter_list", "formal_parameter", 
                   "method_body", "field_declaration", "type", "statement", 
                   "block", "if_statement", "iteration_statement", "while_statement", 
                   "for_statement", "for_initializer", "for_iterator", "local_variable_declaration", 
                   "expression_statement", "return_statement", "expression", 
                   "assignment_expression", "conditional_expression", "logical_or_expression", 
                   "logical_and_expression", "equality_expression", "relational_expression", 
                   "additive_expression", "multiplicative_expression", "unary_expression", 
                   "primary_expression", "literal", "namespace_name_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WS=4
    COMMENT=5
    MULTILINE_COMMENT=6
    CLASS=7
    PUBLIC=8
    PRIVATE=9
    STATIC=10
    VOID=11
    INT=12
    DOUBLE=13
    STRING=14
    BOOL=15
    IF=16
    ELSE=17
    FOR=18
    WHILE=19
    ID=20
    INT_LITERAL=21
    DOUBLE_LITERAL=22
    STRING_LITERAL=23
    BOOL_LITERAL=24
    PLUS=25
    MINUS=26
    MULTIPLY=27
    DIVIDE=28
    MODULO=29
    ASSIGN=30
    EQUALS=31
    NOT_EQUALS=32
    GREATER_THAN=33
    LESS_THAN=34
    GREATER_THAN_OR_EQUAL=35
    LESS_THAN_OR_EQUAL=36
    AND=37
    OR=38
    NOT=39
    LPAREN=40
    RPAREN=41
    LBRACE=42
    RBRACE=43
    SEMICOLON=44
    COMMA=45
    DOT=46
    QUESTION_MARK=47
    COLON=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Compilation_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def using_directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSharpParser.Using_directiveContext)
            else:
                return self.getTypedRuleContext(CSharpParser.Using_directiveContext,i)


        def namespace_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSharpParser.Namespace_declarationContext)
            else:
                return self.getTypedRuleContext(CSharpParser.Namespace_declarationContext,i)


        def getRuleIndex(self):
            return CSharpParser.RULE_compilation_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilation_unit" ):
                listener.enterCompilation_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilation_unit" ):
                listener.exitCompilation_unit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilation_unit" ):
                return visitor.visitCompilation_unit(self)
            else:
                return visitor.visitChildren(self)




    def compilation_unit(self):

        localctx = CSharpParser.Compilation_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilation_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 78
                self.using_directive()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 84
                self.namespace_declaration()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Using_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace_name(self):
            return self.getTypedRuleContext(CSharpParser.Namespace_nameContext,0)


        def SEMICOLON(self):
            return self.getToken(CSharpParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CSharpParser.RULE_using_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsing_directive" ):
                listener.enterUsing_directive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsing_directive" ):
                listener.exitUsing_directive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsing_directive" ):
                return visitor.visitUsing_directive(self)
            else:
                return visitor.visitChildren(self)




    def using_directive(self):

        localctx = CSharpParser.Using_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_using_directive)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(CSharpParser.T__0)
            self.state = 91
            self.namespace_name()
            self.state = 92
            self.match(CSharpParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Namespace_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace_name(self):
            return self.getTypedRuleContext(CSharpParser.Namespace_nameContext,0)


        def LBRACE(self):
            return self.getToken(CSharpParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CSharpParser.RBRACE, 0)

        def type_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSharpParser.Type_declarationContext)
            else:
                return self.getTypedRuleContext(CSharpParser.Type_declarationContext,i)


        def getRuleIndex(self):
            return CSharpParser.RULE_namespace_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace_declaration" ):
                listener.enterNamespace_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace_declaration" ):
                listener.exitNamespace_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespace_declaration" ):
                return visitor.visitNamespace_declaration(self)
            else:
                return visitor.visitChildren(self)




    def namespace_declaration(self):

        localctx = CSharpParser.Namespace_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namespace_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(CSharpParser.T__1)
            self.state = 95
            self.namespace_name()
            self.state = 96
            self.match(CSharpParser.LBRACE)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 97
                self.type_declaration()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(CSharpParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Namespace_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSharpParser.ID)
            else:
                return self.getToken(CSharpParser.ID, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(CSharpParser.DOT)
            else:
                return self.getToken(CSharpParser.DOT, i)

        def getRuleIndex(self):
            return CSharpParser.RULE_namespace_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace_name" ):
                listener.enterNamespace_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace_name" ):
                listener.exitNamespace_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespace_name" ):
                return visitor.visitNamespace_name(self)
            else:
                return visitor.visitChildren(self)




    def namespace_name(self):

        localctx = CSharpParser.Namespace_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_namespace_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(CSharpParser.ID)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 106
                self.match(CSharpParser.DOT)
                self.state = 107
                self.match(CSharpParser.ID)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration(self):
            return self.getTypedRuleContext(CSharpParser.Class_declarationContext,0)


        def getRuleIndex(self):
            return CSharpParser.RULE_type_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_declaration" ):
                listener.enterType_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_declaration" ):
                listener.exitType_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_declaration" ):
                return visitor.visitType_declaration(self)
            else:
                return visitor.visitChildren(self)




    def type_declaration(self):

        localctx = CSharpParser.Type_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.class_declaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSharpParser.CLASS, 0)

        def ID(self):
            return self.getToken(CSharpParser.ID, 0)

        def LBRACE(self):
            return self.getToken(CSharpParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CSharpParser.RBRACE, 0)

        def class_member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSharpParser.Class_memberContext)
            else:
                return self.getTypedRuleContext(CSharpParser.Class_memberContext,i)


        def getRuleIndex(self):
            return CSharpParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = CSharpParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(CSharpParser.CLASS)
            self.state = 116
            self.match(CSharpParser.ID)
            self.state = 117
            self.match(CSharpParser.LBRACE)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1113856) != 0):
                self.state = 118
                self.class_member()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(CSharpParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_declaration(self):
            return self.getTypedRuleContext(CSharpParser.Method_declarationContext,0)


        def field_declaration(self):
            return self.getTypedRuleContext(CSharpParser.Field_declarationContext,0)


        def getRuleIndex(self):
            return CSharpParser.RULE_class_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_member" ):
                listener.enterClass_member(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_member" ):
                listener.exitClass_member(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_member" ):
                return visitor.visitClass_member(self)
            else:
                return visitor.visitChildren(self)




    def class_member(self):

        localctx = CSharpParser.Class_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_member)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.method_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.field_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_return_type(self):
            return self.getTypedRuleContext(CSharpParser.Method_return_typeContext,0)


        def ID(self):
            return self.getToken(CSharpParser.ID, 0)

        def LPAREN(self):
            return self.getToken(CSharpParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CSharpParser.RPAREN, 0)

        def method_body(self):
            return self.getTypedRuleContext(CSharpParser.Method_bodyContext,0)


        def method_modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSharpParser.Method_modifierContext)
            else:
                return self.getTypedRuleContext(CSharpParser.Method_modifierContext,i)


        def formal_parameter_list(self):
            return self.getTypedRuleContext(CSharpParser.Formal_parameter_listContext,0)


        def getRuleIndex(self):
            return CSharpParser.RULE_method_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declaration" ):
                listener.enterMethod_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declaration" ):
                listener.exitMethod_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_declaration" ):
                return visitor.visitMethod_declaration(self)
            else:
                return visitor.visitChildren(self)




    def method_declaration(self):

        localctx = CSharpParser.Method_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0):
                self.state = 130
                self.method_modifier()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.method_return_type()
            self.state = 137
            self.match(CSharpParser.ID)
            self.state = 138
            self.match(CSharpParser.LPAREN)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1110016) != 0):
                self.state = 139
                self.formal_parameter_list()


            self.state = 142
            self.match(CSharpParser.RPAREN)
            self.state = 143
            self.method_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_modifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(CSharpParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(CSharpParser.PRIVATE, 0)

        def STATIC(self):
            return self.getToken(CSharpParser.STATIC, 0)

        def getRuleIndex(self):
            return CSharpParser.RULE_method_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_modifier" ):
                listener.enterMethod_modifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_modifier" ):
                listener.exitMethod_modifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_modifier" ):
                return visitor.visitMethod_modifier(self)
            else:
                return visitor.visitChildren(self)




    def method_modifier(self):

        localctx = CSharpParser.Method_modifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_modifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(CSharpParser.VOID, 0)

        def type_(self):
            return self.getTypedRuleContext(CSharpParser.TypeContext,0)


        def getRuleIndex(self):
            return CSharpParser.RULE_method_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_return_type" ):
                listener.enterMethod_return_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_return_type" ):
                listener.exitMethod_return_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_return_type" ):
                return visitor.visitMethod_return_type(self)
            else:
                return visitor.visitChildren(self)




    def method_return_type(self):

        localctx = CSharpParser.Method_return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_method_return_type)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(CSharpParser.VOID)
                pass
            elif token in [12, 13, 14, 15, 20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.type_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Formal_parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formal_parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSharpParser.Formal_parameterContext)
            else:
                return self.getTypedRuleContext(CSharpParser.Formal_parameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSharpParser.COMMA)
            else:
                return self.getToken(CSharpParser.COMMA, i)

        def getRuleIndex(self):
            return CSharpParser.RULE_formal_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal_parameter_list" ):
                listener.enterFormal_parameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal_parameter_list" ):
                listener.exitFormal_parameter_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal_parameter_list" ):
                return visitor.visitFormal_parameter_list(self)
            else:
                return visitor.visitChildren(self)




    def formal_parameter_list(self):

        localctx = CSharpParser.Formal_parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_formal_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.formal_parameter()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 152
                self.match(CSharpParser.COMMA)
                self.state = 153
                self.formal_parameter()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Formal_parameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CSharpParser.TypeContext,0)


        def ID(self):
            return self.getToken(CSharpParser.ID, 0)

        def getRuleIndex(self):
            return CSharpParser.RULE_formal_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal_parameter" ):
                listener.enterFormal_parameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal_parameter" ):
                listener.exitFormal_parameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal_parameter" ):
                return visitor.visitFormal_parameter(self)
            else:
                return visitor.visitChildren(self)




    def formal_parameter(self):

        localctx = CSharpParser.Formal_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_formal_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.type_()
            self.state = 160
            self.match(CSharpParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CSharpParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CSharpParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSharpParser.StatementContext)
            else:
                return self.getTypedRuleContext(CSharpParser.StatementContext,i)


        def getRuleIndex(self):
            return CSharpParser.RULE_method_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_body" ):
                listener.enterMethod_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_body" ):
                listener.exitMethod_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_body" ):
                return visitor.visitMethod_body(self)
            else:
                return visitor.visitChildren(self)




    def method_body(self):

        localctx = CSharpParser.Method_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_method_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(CSharpParser.LBRACE)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6047447973896) != 0):
                self.state = 163
                self.statement()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self.match(CSharpParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

